@@ -8,6 +8,8 @@
     ancestor nodes
     (previously did not return ancestors' namespace definitions).
   * Added Enumerable to XML::Node
+  * Nokogiri::XML::Schema#validate now uses xmlSchemaValidateFile if a
+    filename is passed, which is faster and more memory-efficient. GH #219
 
 * Bugfixes
 
